--- a/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/src/main/resources/templates/orderForm.html
@@ -19,35 +19,59 @@
     <h3>Deliver my taco masterpieces to...</h3>
     <label for="name">Name: </label>
     <input type="text" th:field="*{name}"/>
+    <span th:if="${#fields.hasErrors('name')}"
+          th:errors="*{name}">
+    </span>
     <br/>
 
     <label for="street">Street address: </label>
     <input type="text" th:field="*{street}"/>
+    <span th:if="${#fields.hasErrors('street')}"
+          th:errors="*{ccNumber}">
+    </span>
     <br/>
 
     <label for="city">City: </label>
     <input type="text" th:field="*{city}"/>
+    <span th:if="${#fields.hasErrors('city')}"
+          th:errors="*{city}">
+    </span>
     <br/>
 
     <label for="state">State: </label>
     <input type="text" th:field="*{state}"/>
+    <span th:if="${#fields.hasErrors('state')}"
+          th:errors="*{state}">
+    </span>
     <br/>
 
     <label for="zip">Zip code: </label>
     <input type="text" th:field="*{zip}"/>
+    <span th:if="${#fields.hasErrors('zip')}"
+          th:errors="*{zip}">
+    </span>
     <br/>
 
     <h3>Here's how I'll pay...</h3>
     <label for="ccNumber">Credit Card #: </label>
     <input type="text" th:field="*{ccNumber}"/>
+    <span th:if="${#fields.hasErrors('ccNumber')}"
+          th:errors="*{ccNumber}">
+    </span>
     <br/>
 
     <label for="ccExpiration">Expiration: </label>
     <input type="text" th:field="*{ccExpiration}"/>
+    <span th:if="${#fields.hasErrors('ccExpiration')}"
+          th:errors="*{ccExpiration}">
+    </span>
     <br/>
 
     <label for="ccCVV">CVV: </label>
     <input type="text" th:field="*{ccCVV}"/>
+    <span th:if="${#fields.hasErrors('ccCVV')}"
+          th:errors="*{ccCVV}">
+    </span>
     <br/>
 
     <input type="submit" value="Submit order"/>
